Created page with "== Atelier OpenSCAD =="

--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -116,9 +116,9 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="OpenSCAD_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Atelier_OpenSCAD">Atelier OpenSCAD</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_OpenSCAD_improvements">Further OpenSCAD improvements</span></h3>
-</div>
+<p><span id="Further_OpenSCAD_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_de_OpenSCAD"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_OpenSCAD">Autres am&eacute;liorations de OpenSCAD</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Part_Workbench">Part Workbench</span></h2>
 </div>
@@ -181,12 +181,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116202211
+Cached time: 20260116202215
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.050 seconds
-Real time usage: 0.064 seconds
+CPU time usage: 0.047 seconds
+Real time usage: 0.092 seconds
 Preprocessor visited node count: 248/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -197,14 +197,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.813      1 -total
- 43.23%    3.378      2 Template:Message
- 29.22%    2.283      1 Template:VeryImportantMessage
- 23.95%    1.871      1 Template:TOCright
- 16.65%    1.301      1 Template:FileName
+100.00%   11.723      1 -total
+ 47.27%    5.542      2 Template:Message
+ 26.61%    3.119      1 Template:VeryImportantMessage
+ 24.87%    2.916      1 Template:FileName
+ 23.65%    2.772      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202211 and revision id 1739288. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202215 and revision id 1739290. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
