Created page with "== Atelier Part =="

--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Release notes 1.2/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Release+notes+1.2&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/Release_notes_1.2.html" class="mw-pt-progress mw-pt-progress--complete" title="Versionshinweise 1.2 (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Release_notes_1.2.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Release notes 1.2 (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li></ul></div>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li></ul></div>
 <div class="warning-box">FreeCAD 1.2 est en cours de d&eacute;veloppement, il n'y a pas encore de date de sortie pr&eacute;vue.</div>
 <div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">
 <p>Il manque des fonctions&nbsp;? Signalez-les dans le fil de discussion du forum <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=10&amp;t=101169">Release notes for v1.2</a>.<br>
@@ -119,12 +119,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="Further_OpenSCAD_improvements"></span>
 </p>
 <h3><span id="Autres_am.C3.A9liorations_de_OpenSCAD"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_OpenSCAD">Autres am&eacute;liorations de OpenSCAD</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Part_Workbench">Part Workbench</span></h2>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Part_improvements">Further Part improvements</span></h3>
-</div>
+<p><span id="Part_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Atelier_Part">Atelier Part</span></h2>
+<p><span id="Further_Part_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_de_Part"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_Part">Autres am&eacute;liorations de Part</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Part_Design_Workbench">Part Design Workbench</span></h2>
 </div>
@@ -181,30 +181,30 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116202215
+Cached time: 20260116202220
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.047 seconds
-Real time usage: 0.092 seconds
+CPU time usage: 0.049 seconds
+Real time usage: 0.061 seconds
 Preprocessor visited node count: 248/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 846/5000000 bytes
+Unstrip post&#8208;expand size: 847/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.723      1 -total
- 47.27%    5.542      2 Template:Message
- 26.61%    3.119      1 Template:VeryImportantMessage
- 24.87%    2.916      1 Template:FileName
- 23.65%    2.772      1 Template:TOCright
+100.00%    7.521      1 -total
+ 55.06%    4.141      2 Template:Message
+ 22.87%    1.720      1 Template:VeryImportantMessage
+ 20.45%    1.538      1 Template:FileName
+ 19.03%    1.431      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202215 and revision id 1739290. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202220 and revision id 1739294. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
