--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -125,15 +125,15 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="Further_Part_improvements"></span>
 </p>
 <h3><span id="Autres_am.C3.A9liorations_de_Part"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_Part">Autres am&eacute;liorations de Part</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Part_Design_Workbench">Part Design Workbench</span></h2>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Part_Design_improvements">Further Part Design improvements</span></h3>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Points_Workbench">Points Workbench</span></h2>
-</div>
+<p><span id="Part_Design_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Atelier_PartDesign">Atelier PartDesign</span></h2>
+<p><span id="Further_Part_Design_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_de_PartDesign"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_PartDesign">Autres am&eacute;liorations de PartDesign</span></h3>
+<p><span id="Points_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Atelier_Points">Atelier Points</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Points_improvements">Further Points improvements</span></h3>
 </div>
@@ -181,12 +181,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116202220
+Cached time: 20260116202228
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.049 seconds
-Real time usage: 0.061 seconds
+CPU time usage: 0.063 seconds
+Real time usage: 0.160 seconds
 Preprocessor visited node count: 248/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -197,14 +197,14 @@ Unstrip post&#8208;expand size: 847/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.521      1 -total
- 55.06%    4.141      2 Template:Message
- 22.87%    1.720      1 Template:VeryImportantMessage
- 20.45%    1.538      1 Template:FileName
- 19.03%    1.431      1 Template:TOCright
+100.00%   13.232      1 -total
+ 41.94%    5.549      2 Template:Message
+ 28.68%    3.795      1 Template:VeryImportantMessage
+ 27.52%    3.641      1 Template:TOCright
+ 11.06%    1.464      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202220 and revision id 1739294. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202228 and revision id 1739300. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
