Created page with "== Atelier Reverse Engineering =="

--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -137,9 +137,9 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="Further_Points_improvements"></span>
 </p>
 <h3><span id="Autres_am.C3.A9liorations_de_Points"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_Points">Autres am&eacute;liorations de Points</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Reverse_Engineering_Workbench">Reverse Engineering Workbench</span></h2>
-</div>
+<p><span id="Reverse_Engineering_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Atelier_Reverse_Engineering">Atelier Reverse Engineering</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Reverse_Engineering_improvements">Further Reverse Engineering improvements</span></h3>
 </div>
@@ -181,12 +181,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116202230
+Cached time: 20260116202256
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.058 seconds
-Real time usage: 0.080 seconds
+CPU time usage: 0.054 seconds
+Real time usage: 0.073 seconds
 Preprocessor visited node count: 248/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -197,14 +197,14 @@ Unstrip post&#8208;expand size: 847/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.091      1 -total
- 49.35%    6.460      2 Template:Message
- 28.25%    3.698      1 Template:TOCright
- 24.23%    3.172      1 Template:FileName
- 19.73%    2.583      1 Template:VeryImportantMessage
+100.00%    5.897      1 -total
+ 54.04%    3.187      2 Template:Message
+ 22.74%    1.341      1 Template:VeryImportantMessage
+ 20.86%    1.230      1 Template:FileName
+ 19.42%    1.145      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202230 and revision id 1739302. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202256 and revision id 1739304. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
