--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -140,15 +140,15 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="Reverse_Engineering_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Atelier_Reverse_Engineering">Atelier Reverse Engineering</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Reverse_Engineering_improvements">Further Reverse Engineering improvements</span></h3>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Robot_Workbench">Robot Workbench</span></h2>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Robot_improvements">Further Robot improvements</span></h3>
-</div>
+<p><span id="Further_Reverse_Engineering_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_de_Reverse_Engineering"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_Reverse_Engineering">Autres am&eacute;liorations de Reverse Engineering</span></h3>
+<p><span id="Robot_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Atelier_Robot">Atelier Robot</span></h2>
+<p><span id="Further_Robot_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_de_Draft_2"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_Draft_2">Autres am&eacute;liorations de Draft</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Sketcher_Workbench">Sketcher Workbench</span></h2>
 </div>
@@ -181,12 +181,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116202256
+Cached time: 20260116202321
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.054 seconds
-Real time usage: 0.073 seconds
+CPU time usage: 0.051 seconds
+Real time usage: 0.103 seconds
 Preprocessor visited node count: 248/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -197,14 +197,14 @@ Unstrip post&#8208;expand size: 847/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.897      1 -total
- 54.04%    3.187      2 Template:Message
- 22.74%    1.341      1 Template:VeryImportantMessage
- 20.86%    1.230      1 Template:FileName
- 19.42%    1.145      1 Template:TOCright
+100.00%   10.895      1 -total
+ 59.46%    6.478      2 Template:Message
+ 39.93%    4.350      1 Template:FileName
+ 23.32%    2.541      1 Template:VeryImportantMessage
+ 14.79%    1.611      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202256 and revision id 1739304. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202320 and revision id 1739310. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
