--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -149,12 +149,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="Further_Robot_improvements"></span>
 </p>
 <h3><span id="Autres_am.C3.A9liorations_de_Draft_2"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_Draft_2">Autres am&eacute;liorations de Draft</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Sketcher_Workbench">Sketcher Workbench</span></h2>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Sketcher_improvements">Further Sketcher improvements</span></h3>
-</div>
+<p><span id="Sketcher_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Atelier_Sketcher">Atelier Sketcher</span></h2>
+<p><span id="Further_Sketcher_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_de_Sketcher"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_Sketcher">Autres am&eacute;liorations de Sketcher</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>It is now possible to import B&eacute;zier and Offset curves as <span typeof="mw:File"><a href="../index.php?title=Sketcher_Projection.svg&amp;filetimestamp=20241129200338&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Projection.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Projection.html" title="Sketcher Projection">External geometry</a>. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25144">Pull request #25144</a></li></ul>
 </div>
@@ -181,12 +181,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116202321
+Cached time: 20260116202326
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.051 seconds
-Real time usage: 0.103 seconds
+CPU time usage: 0.106 seconds
+Real time usage: 0.253 seconds
 Preprocessor visited node count: 248/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -197,14 +197,14 @@ Unstrip post&#8208;expand size: 847/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.895      1 -total
- 59.46%    6.478      2 Template:Message
- 39.93%    4.350      1 Template:FileName
- 23.32%    2.541      1 Template:VeryImportantMessage
- 14.79%    1.611      1 Template:TOCright
+100.00%   14.268      1 -total
+ 61.96%    8.840      1 Template:TOCright
+ 24.52%    3.499      2 Template:Message
+ 15.77%    2.250      1 Template:FileName
+ 10.58%    1.509      1 Template:VeryImportantMessage
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202320 and revision id 1739310. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202326 and revision id 1739314. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
