--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -162,9 +162,9 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="Further_Spreadsheet_improvements"></span>
 </p>
 <h3><span id="Autres_am.C3.A9liorations_de_Spreadsheet"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_Spreadsheet">Autres am&eacute;liorations de Spreadsheet</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Surface_Workbench">Surface Workbench</span></h2>
-</div>
+<p><span id="Surface_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Atelier_Surface">Atelier Surface</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Surface_improvements">Further Surface improvements</span></h3>
 </div>
@@ -179,12 +179,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116202406
+Cached time: 20260116202410
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.056 seconds
-Real time usage: 0.068 seconds
+CPU time usage: 0.045 seconds
+Real time usage: 0.057 seconds
 Preprocessor visited node count: 247/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -195,14 +195,14 @@ Unstrip post&#8208;expand size: 847/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.888      1 -total
- 50.99%    4.022      2 Template:Message
- 23.16%    1.827      1 Template:TOCright
- 22.97%    1.812      1 Template:FileName
- 20.80%    1.641      1 Template:VeryImportantMessage
+100.00%    6.971      1 -total
+ 65.77%    4.585      2 Template:Message
+ 36.82%    2.567      1 Template:FileName
+ 17.21%    1.200      1 Template:VeryImportantMessage
+ 13.76%    0.959      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202406 and revision id 1739320. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202410 and revision id 1739322. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
