--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -165,26 +165,26 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="Surface_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Atelier_Surface">Atelier Surface</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Surface_improvements">Further Surface improvements</span></h3>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="TechDraw_Workbench">TechDraw Workbench</span></h2>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_TechDraw_improvements">Further TechDraw improvements</span></h3>
-</div>
+<p><span id="Further_Surface_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_de_Surface"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_Surface">Autres am&eacute;liorations de Surface</span></h3>
+<p><span id="TechDraw_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Atelier_TechDraw">Atelier TechDraw</span></h2>
+<p><span id="Further_TechDraw_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_de_TechDraw"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_TechDraw">Autres am&eacute;liorations de TechDraw</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Import_and_export">Import and export</span></h2>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116202410
+Cached time: 20260116202417
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.045 seconds
-Real time usage: 0.057 seconds
+CPU time usage: 0.049 seconds
+Real time usage: 0.111 seconds
 Preprocessor visited node count: 247/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -195,14 +195,14 @@ Unstrip post&#8208;expand size: 847/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.971      1 -total
- 65.77%    4.585      2 Template:Message
- 36.82%    2.567      1 Template:FileName
- 17.21%    1.200      1 Template:VeryImportantMessage
- 13.76%    0.959      1 Template:TOCright
+100.00%   14.858      1 -total
+ 45.42%    6.749      2 Template:Message
+ 27.18%    4.039      1 Template:VeryImportantMessage
+ 25.82%    3.836      1 Template:TOCright
+ 24.84%    3.690      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202410 and revision id 1739322. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202417 and revision id 1739328. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
