--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Release notes 1.2/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Release+notes+1.2&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/Release_notes_1.2.html" class="mw-pt-progress mw-pt-progress--complete" title="Versionshinweise 1.2 (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Release_notes_1.2.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Release notes 1.2 (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li></ul></div>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li></ul></div>
 <div class="warning-box">FreeCAD 1.2 est en cours de d&eacute;veloppement, il n'y a pas encore de date de sortie pr&eacute;vue.</div>
 <div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">
 <p>Il manque des fonctions&nbsp;? Signalez-les dans le fil de discussion du forum <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=10&amp;t=101169">Release notes for v1.2</a>.<br>
@@ -174,35 +174,35 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="Further_TechDraw_improvements"></span>
 </p>
 <h3><span id="Autres_am.C3.A9liorations_de_TechDraw"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_TechDraw">Autres am&eacute;liorations de TechDraw</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Import_and_export">Import and export</span></h2>
-</div>
+<p><span id="Import_and_export"></span>
+</p>
+<h2><span class="mw-headline" id="Importer_et_exporter">Importer et exporter</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260116202417
+Cached time: 20260116202420
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.049 seconds
-Real time usage: 0.111 seconds
+CPU time usage: 0.050 seconds
+Real time usage: 0.059 seconds
 Preprocessor visited node count: 247/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 847/5000000 bytes
+Unstrip post&#8208;expand size: 851/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.858      1 -total
- 45.42%    6.749      2 Template:Message
- 27.18%    4.039      1 Template:VeryImportantMessage
- 25.82%    3.836      1 Template:TOCright
- 24.84%    3.690      1 Template:FileName
+100.00%    4.960      1 -total
+ 44.64%    2.214      2 Template:Message
+ 29.48%    1.462      1 Template:VeryImportantMessage
+ 20.66%    1.025      1 Template:FileName
+ 20.32%    1.008      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202417 and revision id 1739328. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202420 and revision id 1739330. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
