--- a/wiki/fr/TechDraw_FaceCenterLine.html
+++ b/wiki/fr/TechDraw_FaceCenterLine.html
@@ -13,7 +13,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Ajouter des lignes &rarr; Ajouter une ligne centrale &agrave; des faces
+<td class="ctEven">TechDraw &rarr; Ajouter des lignes &rarr; Ajouter une ligne centrale &agrave; une face
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Ligne centrale &agrave; une face</b> ajoute une ligne m&eacute;diane &agrave; une ou plusieurs faces.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine_Sample.png&amp;filetimestamp=20190605114533&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine_Sample.png" decoding="async" width="400" height="252" class="mw-file-element" data-file-width="600" data-file-height="378"></a></span>
@@ -150,15 +148,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114202000
+Cached time: 20260116202728
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.108 seconds
-Real time usage: 0.157 seconds
-Preprocessor visited node count: 471/1000000
-Post&#8208;expand include size: 27360/2097152 bytes
-Template argument size: 10450/2097152 bytes
+CPU time usage: 0.081 seconds
+Real time usage: 0.114 seconds
+Preprocessor visited node count: 470/1000000
+Post&#8208;expand include size: 27358/2097152 bytes
+Template argument size: 10448/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -166,19 +164,19 @@ Unstrip post&#8208;expand size: 1661/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.438      1 -total
- 23.17%    7.746      1 Template:TechDraw_Tools_navi/fr
- 17.88%    5.980      2 Template:Navigation_menu_2
- 13.83%    4.626      1 Template:Userdocnavi/fr
- 12.44%    4.160      2 Template:PropertyView
- 10.91%    3.648      1 Template:GuiCommand/fr
- 10.36%    3.464      2 Template:Docnav/fr
-  6.51%    2.177      2 Template:Variable
-  6.31%    2.110      1 Template:Caption
-  6.30%    2.106      1 Template:Version/fr
+100.00%   29.250      1 -total
+ 23.44%    6.857      1 Template:TechDraw_Tools_navi/fr
+ 17.68%    5.170      2 Template:Navigation_menu_2
+ 12.91%    3.776      1 Template:GuiCommand/fr
+ 11.31%    3.309      2 Template:PropertyView
+ 11.19%    3.274      1 Template:Userdocnavi/fr
+  9.91%    2.899      2 Template:Docnav/fr
+  7.14%    2.087      1 Template:MenuCommand
+  6.48%    1.894      1 Template:Caption
+  5.96%    1.742      2 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156641-0!canonical and timestamp 20260114202000 and revision id 1738513. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156641-0!canonical and timestamp 20260116202728 and revision id 1739334. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
