--- a/wiki/fr/TechDraw_FaceCenterLine.html
+++ b/wiki/fr/TechDraw_FaceCenterLine.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw FaceCenterLine/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+FaceCenterLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_FaceCenterLine.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Fl&auml;chenMittellinie (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_FaceCenterLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw FaceCenterLine (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_FaceCenterLine.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Linea centrale alla faccia (67% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_FaceCenterLine.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj o&#347; &#347;ciany (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_FaceCenterLine.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1086;&#1089;&#1077;&#1074;&#1091;&#1102; &#1083;&#1080;&#1085;&#1080;&#1102; &#1082; &#1075;&#1088;&#1072;&#1085;&#1103;&#1084;" (17% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
@@ -60,15 +60,13 @@
 <p><span id="Usage_create"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez une ou plusieurs faces dans une vue.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ajouter une ligne centrale &agrave; des faces</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ajouter une ligne centrale &agrave; des faces</b> du menu.</li></ul></li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ajouter une ligne centrale &agrave; une face</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ajouter une ligne centrale &agrave; une face</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre. Voir <a href="#Options">Options</a> pour plus d'informations.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> pour confirmer.</li>
 <li>Une ligne centrale est ajout&eacute;e au milieu de la bo&icirc;te de d&eacute;limitation de la ou des face(s) s&eacute;lectionn&eacute;e(s).</li></ol>
-</div>
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span id=".C3.89dition"></span><span class="mw-headline" id="&Eacute;dition">&Eacute;dition</span></h2>
@@ -148,35 +146,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116202728
+Cached time: 20260116202747
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.114 seconds
-Preprocessor visited node count: 470/1000000
-Post&#8208;expand include size: 27358/2097152 bytes
-Template argument size: 10448/2097152 bytes
+CPU time usage: 0.079 seconds
+Real time usage: 0.111 seconds
+Preprocessor visited node count: 469/1000000
+Post&#8208;expand include size: 27356/2097152 bytes
+Template argument size: 10446/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1661/5000000 bytes
+Unstrip post&#8208;expand size: 1665/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.250      1 -total
- 23.44%    6.857      1 Template:TechDraw_Tools_navi/fr
- 17.68%    5.170      2 Template:Navigation_menu_2
- 12.91%    3.776      1 Template:GuiCommand/fr
- 11.31%    3.309      2 Template:PropertyView
- 11.19%    3.274      1 Template:Userdocnavi/fr
-  9.91%    2.899      2 Template:Docnav/fr
-  7.14%    2.087      1 Template:MenuCommand
-  6.48%    1.894      1 Template:Caption
-  5.96%    1.742      2 Template:Variable
+100.00%   27.582      1 -total
+ 25.62%    7.066      1 Template:TechDraw_Tools_navi/fr
+ 17.09%    4.714      2 Template:PropertyView
+ 15.31%    4.223      2 Template:Navigation_menu_2
+ 10.66%    2.939      2 Template:Variable
+  9.42%    2.597      1 Template:Userdocnavi/fr
+  9.17%    2.530      1 Template:Caption
+  8.07%    2.225      1 Template:GuiCommand/fr
+  7.38%    2.035      2 Template:Docnav/fr
+  5.34%    1.474      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156641-0!canonical and timestamp 20260116202728 and revision id 1739334. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156641-0!canonical and timestamp 20260116202747 and revision id 1739336. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
