--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -7,6 +7,7 @@
 <li><a href="../it/Interface.html" class="mw-pt-progress mw-pt-progress--med" title="Interfaccia (59% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Interface.html" class="mw-pt-progress mw-pt-progress--complete" title="Interfejs u&#380;ytkownika (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Interface.html" class="mw-pt-progress mw-pt-progress--low" title="Interface (5% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
+<li><a href="../cs/Interface.html" class="mw-pt-progress mw-pt-progress--low" title="U&#382;ivatelsk&eacute; rozhran&iacute; (14% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Interface.html" class="mw-pt-progress mw-pt-progress--med" title="&#1048;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089; (24% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Interface.html" class="mw-pt-progress mw-pt-progress--med" title="&#30028;&#38754; (38% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
@@ -122,34 +123,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260113073159
+Cached time: 20260117083757
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.063 seconds
-Real time usage: 0.115 seconds
+CPU time usage: 0.075 seconds
+Real time usage: 0.111 seconds
 Preprocessor visited node count: 349/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2371/5000000 bytes
+Unstrip post&#8208;expand size: 2530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.403      1 -total
- 27.40%    5.591      1 Template:Interface_navi/bg
- 21.17%    4.320      7 Template:StdMenu
- 20.31%    4.143      1 Template:Userdocnavi/bg
- 15.24%    3.109      2 Template:Navigation_menu_2
- 11.55%    2.356     20 Template:MenuCommand
-  9.11%    1.859      1 Template:Version
-  6.09%    1.242      1 Template:Caption
-  5.86%    1.196      1 Template:TOCright
+100.00%   25.019      1 -total
+ 26.04%    6.515      1 Template:Interface_navi/bg
+ 24.93%    6.238      1 Template:Userdocnavi/bg
+ 20.01%    5.006      7 Template:StdMenu
+ 15.39%    3.850      2 Template:Navigation_menu_2
+  8.99%    2.249     20 Template:MenuCommand
+  8.62%    2.157      1 Template:Caption
+  6.51%    1.629      1 Template:TOCright
+  5.58%    1.397      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260113073158 and revision id 1737802. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117083757 and revision id 1737802. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
