Created page with "=== Ленти с инструменти ==="

--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -42,8 +42,9 @@
 </p>
 <h3><span id=".D0.9C.D0.B5.D0.BD.D1.8E.D1.82.D0.B0"></span><span class="mw-headline" id="&#1052;&#1077;&#1085;&#1102;&#1090;&#1072;">&#1052;&#1077;&#1085;&#1102;&#1090;&#1072;</span></h3>
 <p><a href="../Standard_Menu.html" title="Standard Menu">standard menus</a> &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072;: <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_File_Menu.html" title="Std File Menu"><b>File</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Edit_Menu.html" title="Std Edit Menu"><b>Edit</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_View_Menu.html" title="Std View Menu"><b>View</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Tools_Menu.html" title="Std Tools Menu"><b>Tools</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Macro_Menu.html" title="Std Macro Menu"><b>Macro</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Windows_Menu.html" title="Std Windows Menu"><b>Windows</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Help_Menu.html" title="Std Help Menu"><b>Help</b></a></span>.
+</p><p><span id="Toolbars"></span>
 </p>
-<h3><span class="mw-headline" id="Toolbars">Toolbars</span></h3>
+<h3><span id=".D0.9B.D0.B5.D0.BD.D1.82.D0.B8_.D1.81_.D0.B8.D0.BD.D1.81.D1.82.D1.80.D1.83.D0.BC.D0.B5.D0.BD.D1.82.D0.B8"></span><span class="mw-headline" id="&#1051;&#1077;&#1085;&#1090;&#1080;_&#1089;_&#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;">&#1051;&#1077;&#1085;&#1090;&#1080; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;</span></h3>
 <p>The standard toolbars that appear in the interface are:
 </p>
 <ul><li>File toolbar: tools to work with files, open documents, copy, paste, undo and redo actions.</li>
@@ -126,13 +127,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117085410
+Cached time: 20260117085538
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.103 seconds
-Preprocessor visited node count: 351/1000000
+CPU time usage: 0.069 seconds
+Real time usage: 0.101 seconds
+Preprocessor visited node count: 352/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
 Highest expansion depth: 5/100
@@ -142,18 +143,18 @@ Unstrip post&#8208;expand size: 2530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.605      1 -total
- 28.59%    5.034      1 Template:Userdocnavi/bg
- 25.57%    4.501      1 Template:Interface_navi/bg
- 20.70%    3.645      2 Template:Navigation_menu_2
- 15.35%    2.702      7 Template:StdMenu
-  8.19%    1.441      1 Template:TOCright
-  8.17%    1.438     20 Template:MenuCommand
-  7.24%    1.275      1 Template:Caption
-  6.43%    1.132      1 Template:Version
+100.00%   17.814      1 -total
+ 26.93%    4.797      1 Template:Interface_navi/bg
+ 25.87%    4.608      1 Template:Userdocnavi/bg
+ 17.16%    3.057      7 Template:StdMenu
+ 14.67%    2.613      2 Template:Navigation_menu_2
+  8.79%    1.566     20 Template:MenuCommand
+  7.67%    1.367      1 Template:TOCright
+  7.26%    1.294      1 Template:Caption
+  6.58%    1.173      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117085410 and revision id 1739361. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117085538 and revision id 1739363. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
