Cleaned up package tag

--- a/wiki/Package_Metadata.html
+++ b/wiki/Package_Metadata.html
@@ -15,35 +15,36 @@
 </p><p>The metadata file must be a valid, well-formed XML 1.0 document. It must be called <code>package.xml</code> , and must exist in the base directory of each of the software package's displayed branches (as specified by the <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons/blob/master/AddonCatalog.json">FreeCAD-addons AddonCatalog.json file</a>) in its git repository. Each branch is expected to contain an independent package.xml file that pertains specifically to that branch (e.g. a "development" branch should specify a version number that makes it clear it is a development branch, etc.). All understood XML tags are in lowercase, but unrecognized tags are <b>not</b> an error. Most tags are optional, and some only apply to certain types of package contents (for example, only Workbenches currently provide a "classname" element). Unneeded or unrecognized elements are ignored.
 </p><p>Any file path specified in package.xml must use the slash ("/") as the directory separator: on systems that expect a different separator during execution (e.g. Windows) FreeCAD will automatically convert to the correct separator.
 </p>
-<h2><span class="mw-headline" id="Content_elements">Content elements</span></h2>
+<h2><span class="mw-headline" id="Tags">Tags</span></h2>
 <h3><span id=".3Cpackage.3E"></span><span class="mw-headline" id="&lt;package&gt;">&lt;package&gt;</span></h3>
-<p>The only top-level element allowed is &lt;package&gt;, and the file may only contain one &lt;package&gt; element. Immediately subordinate to that are several required or optional elements, defined here. No other tags are permitted directly under the &lt;package&gt; element.
+<p>The <code>&lt;package&gt;</code> tag is the only top-level element allowed in the manifest and there can only be one. All other tags and their contents are nested within it.
 </p>
-<pre>&lt;package format="1" xmlns="https://wiki.freecad.org/Package_Metadata"&gt;
-</pre>
-<p>The &lt;package&gt; tag is the unique top-level tag in a package.xml file. All other tags are nested under it.
-</p>
+<div class="mw-highlight mw-highlight-lang-xml mw-content-ltr" dir="ltr"><pre><span></span><span class="nt">&lt;package</span><span class="w"> </span>
+<span class="w">    </span><span class="na">format =</span><span class="w"> </span><span class="s">'1'</span>
+<span class="w">    </span><span class="na">xmlns =</span><span class="w"> </span><span class="s">'https://wiki.freecad.org/Package_Metadata'</span>
+<span class="nt">&gt;</span>
+</pre></div>
 <h4><span class="mw-headline" id="Attributes">Attributes</span></h4>
-<ul><li>format="NUMBER": Specifying the package.xml format being used. For this interface, you must specify format="1".</li>
-<li>xmlns="NAMESPACE": Specifies the XML namespace for this package, and must be included exactly as shown above, as a link to <a rel="nofollow" class="external free" href="https://wiki.freecad.org/Package_Metadata">https://wiki.freecad.org/Package_Metadata</a>.</li></ul>
-<h4><span class="mw-headline" id="Required_child_tags">Required child tags</span></h4>
-<p>The top-level &lt;package&gt; element must contain at least the following tags:
+<ul><li><code>format = '&lt;Version&gt;'</code>&nbsp;: Specifies the version of the format being used, currently only version <code>1</code> exists.</li>
+<li><code>xmlns = '&lt;Namespace&gt;'</code>&nbsp;: Specifies the XML namespace being used. Must be set to <code><a rel="nofollow" class="external free" href="https://wiki.freecad.org/Package_Metadata">https://wiki.freecad.org/Package_Metadata</a></code> .</li></ul>
+<h4><span class="mw-headline" id="Required_Tags">Required Tags</span></h4>
+<p>The following tags must be present in the  <code>&lt;package&gt;</code> element:
 </p>
 <ul><li><a href="#.3Cname.3E">&lt;name&gt;</a></li>
 <li><a href="#.3Cversion.3E">&lt;version&gt;</a></li>
 <li><a href="#.3Cdate.3E">&lt;date&gt;</a></li>
 <li><a href="#.3Cdescription.3E">&lt;description&gt;</a></li>
-<li><a href="#.3Cmaintainer.3E">&lt;maintainer&gt;</a> (multiple, but at least one)</li>
-<li><a href="#.3Clicense.3E">&lt;license&gt;</a> (multiple, but at least one)</li>
+<li><a href="#.3Cmaintainer.3E">&lt;maintainer&gt;</a></li>
+<li><a href="#.3Clicense.3E">&lt;license&gt;</a></li>
 <li><a href="#.3Cicon.3E">&lt;icon&gt;</a></li>
-<li><a href="#.3Ccontent.3E">&lt;content&gt;</a> (container element for package content items)</li></ul>
-<h4><span class="mw-headline" id="Optional_child_tags">Optional child tags</span></h4>
-<ul><li><a href="#.3Curl.3E">&lt;url&gt;</a> (multiple)</li>
-<li><a href="#.3Cauthor.3E">&lt;author&gt;</a> (multiple)</li>
-<li><a href="#.3Cdepend.3E">&lt;depend&gt;</a> (multiple)</li>
-<li><a href="#.3Cconflict.3E">&lt;conflict&gt;</a> (multiple)</li>
-<li><a href="#.3Creplace.3E">&lt;replace&gt;</a> (multiple)</li>
-<li><a href="#.3Ctag.3E">&lt;tag&gt;</a> (multiple)</li>
+<li><a href="#.3Ccontent.3E">&lt;content&gt;</a></li></ul>
+<h4><span class="mw-headline" id="Optional_Tags">Optional Tags</span></h4>
+<ul><li><a href="#.3Curl.3E">&lt;url&gt;</a></li>
+<li><a href="#.3Cauthor.3E">&lt;author&gt;</a></li>
+<li><a href="#.3Cdepend.3E">&lt;depend&gt;</a></li>
+<li><a href="#.3Cconflict.3E">&lt;conflict&gt;</a></li>
+<li><a href="#.3Creplace.3E">&lt;replace&gt;</a></li>
+<li><a href="#.3Ctag.3E">&lt;tag&gt;</a></li>
 <li><a href="#.3Cfreecadmin.3E">&lt;freecadmin&gt;</a></li>
 <li><a href="#.3Cfreecadmax.3E">&lt;freecadmax&gt;</a></li>
 <li><a href="#.3Cpythonmin.3E">&lt;pythonmin&gt;</a></li></ul>
@@ -356,33 +357,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117085719
+Cached time: 20260117091328
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.094 seconds
-Preprocessor visited node count: 626/1000000
+CPU time usage: 0.110 seconds
+Real time usage: 0.139 seconds
+Preprocessor visited node count: 624/1000000
 Post&#8208;expand include size: 7117/2097152 bytes
 Template argument size: 2545/2097152 bytes
 Highest expansion depth: 5/100
-Expensive parser function count: 1/100
+Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 8159/5000000 bytes
+Unstrip post&#8208;expand size: 8585/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.633      1 -total
- 27.26%    3.444      1 Template:Powerdocnavi
- 16.77%    2.119     37 Template:Incode
- 14.04%    1.774      1 Template:Navigation_menu_2
- 11.34%    1.433      1 Template:Code
-  9.31%    1.176      3 Template:Version
-  8.40%    1.061      1 Template:TOCright
-  8.26%    1.044      1 Template:MenuCommand
+100.00%   22.953      1 -total
+ 23.18%    5.321      1 Template:Powerdocnavi
+ 20.37%    4.677     37 Template:Incode
+ 12.62%    2.897      1 Template:Navigation_menu_2
+ 12.11%    2.779      1 Template:TOCright
+ 10.40%    2.388      1 Template:Code
+ 10.04%    2.305      3 Template:Version
+  6.36%    1.460      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117085758 and revision id 1739364. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117091344 and revision id 1739371. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
