Fix license Id formatting

--- a/wiki/Package_Metadata.html
+++ b/wiki/Package_Metadata.html
@@ -78,17 +78,18 @@
 </p><p>SPDX short identifier of the license(s) for this package, e.g. BSD-2-Clause, GPL-3.0-or-later, LGPL-2.1-or-later. In order to assist machine readability, only include the license's SPDX short identifier (see <a rel="nofollow" class="external text" href="https://spdx.org/licenses/">the SPDX site</a>). For multiple licenses multiple separate tags must be used. A package will have multiple licenses if different source files have different licenses. Every license occurring in the source files should have a corresponding &lt;license&gt; tag. For any explanatory text about licensing caveats, please use the &lt;description&gt; tag. To specify that no license applies (e.g. "All rights reserved.") set this value to "UNLICENSED". To specify a custom license without an SPDX identifier set this value to "SEE LICENSE IN &lt;filename&gt;".
 </p><p>Commonly-used license strings:
 </p>
-<ul><li><code>"Apache-2.0"</code></li>
-<li><code>"BSD-2-Clause"</code></li>
-<li><code>"BSD-3-Clause"</code></li>
-<li><code>"BSL-1.0"</code></li>
-<li><code>"GPL-2.0-or-later"</code></li>
-<li><code>"GPL-3.0-or-later"</code></li>
-<li><code>"LGPL-2.1-or-later"</code></li>
-<li><code>"LGPL-3.0-or-later"</code></li>
-<li><code>"MIT"</code></li>
-<li><code>"MPL-1.1"</code></li>
-<li><code>"CC0-1.0"</code> (Public Domain dedication)</li></ul>
+<ul><li><code>Apache-2.0</code></li>
+<li><code>BSD-2-Clause</code></li>
+<li><code>BSD-3-Clause</code></li>
+<li><code>BSL-1.0</code></li>
+<li><code>GPL-2.0-or-later</code></li>
+<li><code>GPL-3.0-or-later</code></li>
+<li><code>LGPL-2.1-or-later</code></li>
+<li><code>LGPL-3.0-or-later</code></li>
+<li><code>MIT</code></li>
+<li><code>MPL-1.1</code></li>
+<li><code>CC-BY-SA-4.0</code></li>
+<li><code>CC0-1.0</code></li></ul>
 <p><b>Backwards-compatibility note</b>: The Addon Manager will attempt to normalize license identifiers that do not exactly match an SPDX license string. This will sometimes result in a license ID that yields a non-FSF-Libre or non-OSI-approved license: for example "LGPL2" will be normalized to "LGPL-2.0", which is a non-FSF-Libre license: what was probably intended was "LGPL-2.1-or-later".
 </p>
 <h4><span class="mw-headline" id="Attributes_3">Attributes</span></h4>
@@ -357,15 +358,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117091328
+Cached time: 20260117092835
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.110 seconds
-Real time usage: 0.139 seconds
-Preprocessor visited node count: 624/1000000
-Post&#8208;expand include size: 7117/2097152 bytes
-Template argument size: 2545/2097152 bytes
+CPU time usage: 0.085 seconds
+Real time usage: 0.090 seconds
+Preprocessor visited node count: 630/1000000
+Post&#8208;expand include size: 7120/2097152 bytes
+Template argument size: 2535/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -373,17 +374,17 @@ Unstrip post&#8208;expand size: 8585/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.953      1 -total
- 23.18%    5.321      1 Template:Powerdocnavi
- 20.37%    4.677     37 Template:Incode
- 12.62%    2.897      1 Template:Navigation_menu_2
- 12.11%    2.779      1 Template:TOCright
- 10.40%    2.388      1 Template:Code
- 10.04%    2.305      3 Template:Version
-  6.36%    1.460      1 Template:MenuCommand
+100.00%   14.591      1 -total
+ 26.44%    3.858      1 Template:Powerdocnavi
+ 16.10%    2.350      1 Template:Navigation_menu_2
+ 15.10%    2.203     38 Template:Incode
+ 10.77%    1.572      1 Template:Code
+  9.55%    1.393      1 Template:MenuCommand
+  8.64%    1.261      3 Template:Version
+  7.64%    1.114      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117091344 and revision id 1739371. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117092846 and revision id 1739391. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
